# IR_Derry_Girls

./: .gitignore  README.md  interpr_path  pyproject.toml
Dataset/: DERRY-GIRLS-SCRIPT.txt  bm25_full_index.pkl  bm25_full_index_stemmed.pkl  derry_girls_metadata.json
py_Files/: BM25_index_with_stemming_evaluation.py  BM25_index_without_stemming.py  BM25_indexing_with_stemming.py  FAISS_Indexing_all-mpnet-base-v2.py  FAISS_Indexing_all-mpnet-base-v2_at5.py  FAISS_Indexing_msmarco-MiniLM-L6-c.py  FAISS_indexing_new.py  Faiss_indexing_new.py  Hybrid_retrieval_BM25_FAISS_final.py  _FAISS_Indexing_all-mpnet-base-v2.py  __BM25_indexing_with_stemming.py  __FAISS_Indexing_all-mpnet-base-v2.py  _hybrid_retrieval_final_draft_improved.py  _hybrid_retrieval_with_BERT.py  evaluation_function_from_hybrid_final_dr.py  hybrid_retrieval_draft_V1.py  hybrid_retrieval_draft_V3.py  hybrid_retrieval_final_draft_improved.py  hybrid_retrieval_new.py  hybrid_retrieval_with_cross_encoder.py  ie&ir_faiss_indexing_test.py  ie&ir_hybrid_retrieval_bm25_faiss.py  ie_ir_faiss_indexing_test.py  indexing_draft_df_mt_2504.py  queries.py  queries_file.py  test.py  z_BM25_indexing.py  z_FAISS_Indexing_paraphrase-MiniLM-L6-v2.py  z_indexing_draft_revised.py
py_Files/Archive/: FAISS_Indexing_all-mpnet-base-v2_at5.py  _hybrid_retrieval_with_BERT.py  draft_hybrid_retrieval_faiss_sqlite_old.py  draft_hybrid_retrieval_with_BERT_RRF_QueryExpansion.py  hybrid_retrieval_draft_V1.py  hybrid_retrieval_draft_V2.py  hybrid_retrieval_final_draft.py  hybrid_retrieval_with_BERT_improved_not_at_all.py  (+4 more)
(+27 files in other folders)
