[project]
name = "ir-derry-girls"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
